--- a/css/style.css
+++ b/css/style.css
@@ -384,7 +384,7 @@ main {
 }
 
 .project-box:nth-child(1) {
-  background-image: url(../assets/images/projects/Campus\ Connect.png);
+  background-image: url(../assets/images/projects/meezan.jpg);
 }
 
 .project-box:nth-child(2) {
